--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">7MinutesWorkout</string>
+    <string name="image">image</string>
+    <string name="start">Start</string>
 </resources>
