--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">7MinutesWorkout</string>
     <string name="image">image</string>
     <string name="start">Start</string>
+    <string name="getReady">Get Ready For</string>
 </resources>
