--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,11 @@
     <string name="this_will_stop">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
     <string name="your_bmi">YOUR BMI</string>
     <string name="calculate">Calculate</string>
+    <string name="metric_units">Metric Units</string>
+    <string name="us_units">US units</string>
+    <string name="height_in_cm">hEIGHT (in cm)</string>
+    <string name="weight_in_kg">WEIGHT (in kg)</string>
+    <string name="normal">Normal</string>
+    <string name="inch">Inch</string>
+    <string name="feet">Feet</string>
 </resources>
