--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="calculate">Calculate</string>
     <string name="metric_units">Metric Units</string>
     <string name="us_units">US units</string>
-    <string name="height_in_cm">hEIGHT (in cm)</string>
+    <string name="height_in_cm">HEIGHT (in cm)</string>
     <string name="weight_in_kg">WEIGHT (in kg)</string>
     <string name="normal">Normal</string>
     <string name="inch">Inch</string>
